# ssot-task-manager

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: create_table.yml
src/: __init__.py  cli.py  manager.py  schema.py
supabase/migrations/: 001_create_ssot_task_lists.sql
